Added some basic bootstrap styles to make UI a bit less crap

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,5 @@
-html
-    head
-        title!= title
-    body
-        h1!= message
+extends layout
+
+block content
+    h1 Living Styleguide Project
 
