--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,26 @@ html
     head
         block head
             meta(charset="utf-8")
+            meta(name="viewport" content="width=device-width, initial-scale=1")
+            link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css")
             link(href="css/styles.css", rel="stylesheet")
             title Styleguide
     body
+        nav.navbar.navbar-default
+          .container-fluid
+            .navbar-header
+              button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
+                span.sr-only Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+              a.navbar-brand(href="/") Styleguide
+
+            .collapse.navbar-collapse#bs-example-navbar-collapse-1
+              ul.nav.navbar-nav
+                li.active
+                    a(href="/colours") Colours
+                        span.sr-only (current)
         #content
             block content
 
