--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,9 +20,11 @@ html
 
             .collapse.navbar-collapse#bs-example-navbar-collapse-1
               ul.nav.navbar-nav
-                li.active
+                li
                     a(href="/colours") Colours
                         span.sr-only (current)
+                li
+                    a(href="/images") Images
         #content
             block content
 
