--- a/views/colours.jade
+++ b/views/colours.jade
@@ -4,6 +4,7 @@ block content
     h1 SASS Colours
 
     p The following colours have been found defined in your SCSS files.
+    p #{component()}
 
     #files
         each file in filenames
