Proof of concept of loading and rendering templates from disk

--- a/views/colours.jade
+++ b/views/colours.jade
@@ -4,7 +4,7 @@ block content
     h1 SASS Colours
 
     p The following colours have been found defined in your SCSS files.
-    p #{component()}
+    !{component('test/component')}
 
     #files
         each file in filenames
