--- a/views/colours.jade
+++ b/views/colours.jade
@@ -4,7 +4,7 @@ block content
     h1 SASS Colours
 
     p The following colours have been found defined in your SCSS files.
-    !{component('test/component')}
+    != component('form/button', {type: 'reset', value: 'Submit button'})
 
     #files
         each file in filenames
