Don't list files that have no colours in them

--- a/views/colours.jade
+++ b/views/colours.jade
@@ -4,16 +4,16 @@ block content
     h1 SASS Colours
 
     p The following colours have been found defined in your SCSS files.
-    != component('form/button', {type: 'reset', value: 'Submit button'})
 
     #files
         each file in filenames
-            .file
-                h2= file.filename
-                ul.colours
-                    each line in file.lines
-                        each colour in line.colours
-                            li.colour
-                                .colourSwatch(class=colour.weight < 130 ? 'dark' : 'light', style="background: #{colour.value}") #{colour.value}
-                                p Line: #{line.line}, Position: #{colour.position}
+            if file.lines.length > 0
+                .file
+                    h2= file.filename
+                    ul.colours
+                        each line in file.lines
+                            each colour in line.colours
+                                li.colour
+                                    .colourSwatch(class=colour.weight < 130 ? 'dark' : 'light', style="background: #{colour.value}") #{colour.value}
+                                    p Line: #{line.line}, Position: #{colour.position}
 
