New section for alerts and more data-driven pages

--- a/components/_components.scss
+++ b/components/_components.scss
@@ -1,4 +1,7 @@
 
-// include form styles
+// include form component styles
 @import 'form/form';
+
+// include view component styles
+@import 'views/views';
 
