--- a/sass/master.scss
+++ b/sass/master.scss
@@ -2,3 +2,7 @@
 // include components
 @import "../components/components";
 
+// include typography
+@import "typography/headings";
+@import "typography/bodycopy";
+
