--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,18 @@ html
             link(href="/css/master.css", rel="stylesheet")
             title Styleguide
     body
+        nav
+            ul
+                li.nav-heading Components
+                li
+                    a(href="/components/form/button") Buttons
+                li
+                    a(href="/components/views/alerts") Alerts
+                li.nav-heading Typography
+                li
+                    a(href="/styleguide/typography/headings") Headings
+                li
+                    a(href="/styleguide/typography/bodycopy") Body copy
         #content
             block content
 
