--- a/public/css/master.css
+++ b/public/css/master.css
@@ -47,4 +47,15 @@ input[disabled="disabled"] {
   border-color: #ED1548;
   background-color: #FFD9E7; }
 
+.section-heading {
+  font-size: 2.625rem;
+  line-height: 3.281rem;
+  padding: 0.667rem;
+  background: #f5f5f5;
+  color: #737373; }
+
+.intro {
+  font-size: 1.5rem;
+  line-height: 1.875rem; }
+
 /*# sourceMappingURL=master.css.map */
