Add the component specific pages to the component directories

--- a/components/form/button/component.jade
+++ b/components/form/button/component.jade
@@ -1,5 +1,6 @@
-extends layout
+extends /views/layout
 
 block content
+    h1 THis is a test
     != styleguide_component(slug, styleguide_stubs(slug))
 
