--- a/helpers/templates/styleguide_component.jade
+++ b/helpers/templates/styleguide_component.jade
@@ -1,21 +1,17 @@
 h1= main_title
 
-each paragraph in description
-    p!= paragraph 
-
 each section in sections
-  .preview
-    h2= section.section_title
+  h2= section.section_title
 
-    h3 Preview
-    p!= component(slug, section.data)
+  h3 Preview
+  p!= component(slug, section.data)
 
-    h3 HTML code
-    pre.code= htmlFormat(component(slug, section.data))
+  h3 HTML code
+  pre.code= htmlFormat(component(slug, section.data))
 
-    h3 Component call
-    pre.code
-      | component('#{slug}', {as below})
-      .component-data
-        | #{jsonFormat(section.data)}
+  h3 Component call
+  pre.code
+    | component('#{slug}', <b>{as below}</b>)
+    .component-data
+      | #{jsonFormat(section.data)}
 
