Added a second example on the buttons page

--- a/components/form/button/component.jade
+++ b/components/form/button/component.jade
@@ -10,3 +10,6 @@ block content
     .normal
         != styleguide_component(slug, {sections: styleguide_stubs(slug)['submit']})
 
+    .darkest
+        != styleguide_component(slug, {sections: styleguide_stubs(slug)['submit']})
+
