A bit more reorganisation and renaming

--- a/components/views/alerts/component.jade
+++ b/components/views/alerts/component.jade
@@ -1,6 +1,3 @@
-extends /views/layout
-
-block content
-    h1 THis is a test
-    != styleguide_component(slug, styleguide_stubs(slug))
+section(class="messaging-#{type}")
+	p= text
 
