Finally happy with the file layout

--- a/styleguide/_components.scss
+++ b/styleguide/_components.scss
@@ -2,6 +2,9 @@
 // include form component styles
 @import 'form/form';
 
+// include typography component styles
+@import 'typography/typography';
+
 // include view component styles
 @import 'views/views';
 
