--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,9 +12,9 @@ html
             ul
                 li.nav-heading Components
                 li
-                    a(href="/components/form/button") Buttons
+                    a(href="/styleguide/form/button") Buttons
                 li
-                    a(href="/components/views/alerts") Alerts
+                    a(href="/styleguide/views/alerts") Alerts
                 li.nav-heading Typography
                 li
                     a(href="/styleguide/typography/headings") Headings
