Updated scss files to use new file layout

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -1,8 +1,4 @@
 
-// include components
-@import "../components/components";
-
-// include typography
-@import "typography/headings";
-@import "typography/bodycopy";
+// include styleguide
+@import "../styleguide/styleguide";
 
