Renamed in preparation for changing case

--- a/styleguide/typography/_typography.scss
+++ b/styleguide/typography/_typography.scss
@@ -1,6 +1,6 @@
 
 // include bodycopy styles
-@import 'bodycopy/bodycopy';
+@import 'body_copy/body_copy';
 
 // include heading styles
 @import 'headings/headings';
